JWT--Redis--Login--Register--SendEmail
