# docs/swagger.yaml
@@ -62,6 +62,56 @@ paths:
       summary: 问题列表
       tags:
       - 公共方法
+  /register:
+    post:
+      parameters:
+      - description: 用户名
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: 密码
+        in: formData
+        name: password
+        required: true
+        type: string
+      - description: phone
+        in: formData
+        name: phone
+        type: string
+      - description: mail
+        in: formData
+        name: mail
+        required: true
+        type: string
+      - description: code
+        in: formData
+        name: code
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 用户的注册
+      tags:
+      - 公共方法
+  /sendcode:
+    post:
+      parameters:
+      - description: mail
+        in: formData
+        name: mail
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 发送验证码
+      tags:
+      - 公共方法
   /submit-list:
     get:
       parameters:
